# takopi

./: .gitignore  AGENTS.md  Justfile  changelog.md  mkdocs.yml  pyproject.toml  readme.md  zensical.toml  项目文档.md
.github/workflows/: ci.yml  docs.yml  release.yml
codex/codex_telegram_bridge/: bridge_common.py  exec_bridge.py
codex_telegram_bridge/: pyproject.toml  readme.md
codex_telegram_bridge/tests/: test_exec_render.py
docs/: adding-a-runner.md  architecture.md  developing.md  discord_usage.md  discord_user_guide.md  index.md  plugins.md  public-api.md  specification.md  user-guide-zh.md
docs/explanation/: architecture.md  module-map.md  plugin-system.md
docs/how-to/: add-a-runner.md  chat-sessions.md  dev-setup.md  file-transfer.md  projects.md  route-by-chat.md  topics.md  troubleshooting.md  voice-notes.md  worktrees.md  write-a-plugin.md
docs/javascripts/: hero-chat.js
docs/reference/: commands-and-directives.md  config.md  context-resolution.md  index.md  plugin-api.md  plugins.md  specification.md
docs/stylesheets/: admonitions.css
reference/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
reference/.github/workflows/: ci.yml  release.yml
reference/src/takopi_discord/: __init__.py  backend.py  bridge.py  client.py  file_transfer.py  handlers.py  loop.py  mapping.py  onboarding.py  outbox.py  overrides.py  render.py  state.py  types.py  voice.py
reference/src/takopi_discord/commands/: __init__.py  dispatch.py  executor.py  registration.py
reference/tests/: test_config_reload.py  test_file_transfer.py  test_handlers.py  test_import.py
scripts/: onboarding_preview.py
tests/: conftest.py  factories.py  plugin_fixtures.py  telegram_fakes.py  test_api_exports.py  test_auto_router.py  test_claude_runner.py  test_claude_schema.py  test_cli_auto_router.py  test_cli_chat_id.py  test_cli_commands.py  test_cli_config.py  test_cli_doctor.py  test_cli_handoff.py  test_cli_helpers.py  test_codex_runner_helpers.py  test_codex_schema.py  test_codex_tool_result_summary.py  test_command_registry.py  test_config_store.py  test_config_watch.py  test_cron_manager.py  test_cron_scheduler.py  test_discord_backend.py  test_discord_bridge.py  test_discord_client.py  test_discord_render.py  test_engine_discovery.py  test_exec_bridge.py  test_exec_render.py  test_exec_runner.py  test_git_utils.py  test_greetings.py  test_handoff.py  test_image_support.py  test_lockfile.py  test_onboarding.py  test_onboarding_helpers.py  test_onboarding_interactive.py  test_opencode_runner.py  (+43 more)
(+198 files in other folders)
