[project]
name = "takopi"
version = "0.1.0"
description = "Telegram bridge tools for Codex."
readme = "readme.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "markdown-it-py",
  "rich>=14.2.0",
  "sulguk>=0.11.0",
  "typer>=0.21.0",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/banteg/takopi"
Repository = "https://github.com/banteg/takopi"
Issues = "https://github.com/banteg/takopi/issues"

[project.scripts]
takopi = "takopi.exec_bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/takopi"]

[tool.hatch.build.targets.sdist]
include = ["src/takopi", "readme.md", "LICENSE"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.7",
]

[tool.pytest.ini_options]
addopts = ["--cov=takopi", "--cov-report=term-missing"]
testpaths = ["tests"]
